checkboxes. UI bugs: backlog section grows in height instead of initiating scrollbars. Task item gets wider instead of wrapping text and getting taller, when text doesnt fit in single line. Task item text overlaps the new checkbox, since checkbox is absolutely positioned.

--- a/src/css/BacklogSection.css
+++ b/src/css/BacklogSection.css
@@ -35,4 +35,9 @@
 .BacklogSection .wrapper {
     padding-left: 0.8rem;
     padding-right: 0.8rem;
+    overflow: auto;
+}
+
+.wrapper::-webkit-scrollbar {
+    width: 0rem;        /* MAKE THE SCROLLBAR INVISIBLE LIKE A SEXY MOFO */
 }
