--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -46,6 +46,16 @@
     top: 0.4rem;
 }
 
+.task .checkbox {
+    position: absolute;
+    left: 0.4rem;
+    top: 0rem;
+    height: 100%;
+    padding: 0rem;
+    margin: 0rem;
+    opacity: 0.6;
+}
+
 .highlighted p {
     font-weight: bold;
 }
